--- a/src/dangkydangnhap/DangKy.form
+++ b/src/dangkydangnhap/DangKy.form
@@ -54,7 +54,7 @@
                           <EmptySpace min="-2" pref="256" max="-2" attributes="0"/>
                           <Component id="btnDk_345" min="-2" pref="121" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
-                          <Component id="btnBack_345" min="-2" max="-2" attributes="0"/>
+                          <Component id="btnLIn_345" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" attributes="0">
                           <EmptySpace max="-2" attributes="0"/>
@@ -128,7 +128,7 @@
                   <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="btnDk_345" alignment="3" min="-2" pref="39" max="-2" attributes="0"/>
-                      <Component id="btnBack_345" alignment="3" min="-2" pref="39" max="-2" attributes="0"/>
+                      <Component id="btnLIn_345" alignment="3" min="-2" pref="39" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace pref="35" max="32767" attributes="0"/>
               </Group>
@@ -170,7 +170,7 @@
         </Component>
         <Component class="javax.swing.JTextField" name="txtName_345">
         </Component>
-        <Component class="javax.swing.JButton" name="btnBack_345">
+        <Component class="javax.swing.JButton" name="btnLIn_345">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="ff" green="99" red="99" type="rgb"/>
@@ -184,7 +184,7 @@
             <Property name="text" type="java.lang.String" value="&#x110;&#x102;NG NH&#x1eac;P"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnBack_345ActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnLIn_345ActionPerformed"/>
           </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btnDk_345">
